--- a/package.json
+++ b/package.json
@@ -14,8 +14,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.2",
     "gatsby": "^4.6.0",
+    "gatsby-plugin-fontawesome-css": "^1.2.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-postcss": "^5.6.0",
     "gatsby-plugin-sharp": "^4.6.0",
@@ -24,6 +30,7 @@
     "postcss": "^8.4.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-transition-group": "^4.4.2",
     "tailwindcss": "^3.0.18"
   },
   "devDependencies": {
