--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.2",
+    "formik": "^2.2.9",
     "gatsby": "^4.6.0",
     "gatsby-plugin-fontawesome-css": "^1.2.0",
     "gatsby-plugin-image": "^2.6.0",
