--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gatsby": "^4.6.0",
     "gatsby-plugin-fontawesome-css": "^1.2.0",
     "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-netlify": "^4.3.1",
     "gatsby-plugin-postcss": "^5.6.0",
     "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-source-filesystem": "^4.6.0",
